# e-commai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg  training.py
alembic/: env.py
alembic/versions/: 20250529_0001_initial_chainlit_tables.py  20250530_0002_product_attributes_table.py  20250531_0003_product_table.py  20260709_0004_product_price_float.py
public/: index.html  theme.json  widget.css
src/tests/: conftest.py
src/tests/integration/loaddata/: factories.py  test_build_category_attributes.py
src/tests/llm/: test_intent_classification.py  test_support_consultation.py
src/tests/llm/multiturn/: test_multiturn_product_consultation.py
src/tests/llm/multiturn/goldens/: rag_flow_dataset.json
src/tests/unit/: test_category_selector.py  test_intent_router.py
src/ydachnik_chatbot/: __init__.py  app.py  chat.py  runtime.py  schemas.py  settings.py
src/ydachnik_chatbot/ai/: __init__.py  category_candidates.py  filters.py  graph.py  llm.py  nodes.py  prompts.py  retrievers.py  router.py  state.py  stt.py  tools.py  utils.py
src/ydachnik_chatbot/ai/prompts_data/: customer_support.md
src/ydachnik_chatbot/ai/prompts_store/: base_store.py  langsmith_store.py
src/ydachnik_chatbot/catalog/: __init__.py  csv_reader.py  documents_loader.py
src/ydachnik_chatbot/infrastructure/db/: __init__.py  engine.py  product_category_repo.py  vectorstore.py
src/ydachnik_chatbot/infrastructure/db/models/: chainlit.py  product.py
src/ydachnik_chatbot/management/: classification.py  loaddata.py  loaddata_utils.py
