[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ydachnik-chatbot"
version = "0.1.0"
description = "Chainlit chatbot for ydachnik.by"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "cachier>=3.4.1",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "scrapy>=2.16.0",
    "rapidfuzz>=3.0.0",
    "langgraph>=1.2.1",
    "langchain-openai>=1.2.2",
    "langsmith>=0.5.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "rank-bm25>=0.2.2",
    "psycopg[binary]>=3.3.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "alembic>=1.13.0",
    "polyfactory>=3.3.0",
    "sentence-transformers>=5.5.1",
    "deepeval>=4.0.7",
    "pytest-cov>=7.1.0",
    "langchain>=1.3.11",
]

[project.scripts]
ydachnik-load-data = "ydachnik_chatbot.management.loaddata:main"
ydachnik-scrape = "ydachnik_chatbot.site_parser.scraper:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C90",  # mccabe
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "Q",    # flake8-quotes
    "S",    # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"src/ydachnik_chatbot/ai/prompts.py" = ["E501", "W291"]
"src/tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-m 'not ai'"
markers = [
    "ai: evaluation or integration tests that require AI/LLM configuration",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/ydachnik_chatbot"]

[tool.hatch.build.targets.wheel.force-include]
"src/ydachnik_chatbot/ai/prompts_data/customer_support.md" = "ydachnik_chatbot/ai/prompts_data/customer_support.md"
